# chess

./: .gitignore  README.md  data.py  drawer.py  main.py  pyproject.toml
__test__/: test_get_chessboard_initialized.py  test_is_movement_authorized.py
chess/: board.py  data.py  game_manager.py  main.py  ui_manager.py
chess/tests/: __init__.py  test_board.py  test_data.py  test_manage.py
