[tool.poetry]
name = "chess"
version = "0.1.0"
description = ""
authors = ["Benjamin JALON <bjalon@qastia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
svgwrite = "^1.4.3"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
