[tool.poetry]
name = "chess"
version = "0.2.0"
description = ""
authors = ["Robin Chalas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-pyinstaller-plugin.scripts]
chess = { source = "chess/main.py", type = "onefile", bundle = false }